--- a/windows/.gitignore
+++ b/windows/.gitignore
@@ -1,17 +1,40 @@
+# Flutter/Dart/Pub related
+.dart_tool/
+.packages
+.pub-cache/
+build/
+.flutter-plugins
+.flutter-plugins-dependencies
+.melos_tool/
+.melos_workspace/
+
+# IDEs
+.idea/
+.vscode/
+*.iml
+
+# Project-specific
+.env
+.env.*
+*.log
+
+# OS-specific
+.DS_Store
+Thumbs.db
+
+# Flutter ephemeral directory
 flutter/ephemeral/
 
-# Visual Studio user-specific files.
+# Visual Studio specific
 *.suo
 *.user
 *.userosscache
 *.sln.docstates
 
-# Visual Studio build-related files.
+# Visual Studio build folders
 x64/
 x86/
 
 # Visual Studio cache files
-# files ending in .cache can be ignored
 *.[Cc]ache
-# but keep track of directories ending in .cache
 !*.[Cc]ache/
